// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page data still loading returns loading state 1`] = `
<div>
  <h1>
    Loading
  </h1>
</div>
`;

exports[`Home Page receives all the data attaches username 1`] = `
<div>
  <h1>
    Welcome to the homepage, 
    pqrs
  </h1>
</div>
`;
